<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="high">high</string>
    <string name="mean">mean</string>
    <string name="low">low</string>
    <string name="location_accuracy">Location GPS</string>

    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string name="record">record</string>
    <string name="recording">Recording</string>
    <string name="stop">stop</string>
    <string name="file_name">File name</string>
    <string name="file_name_required">File name required</string>
    <string name="paired_devides">Paired devides</string>
    <string name="choose_sensors">Choose sensors</string>

    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="about">About us</string>
    <string name="about_text">BITARIA has continued to take on new challenges in the effort to create new products and advance technologies with the spirit of utilizing technology to help people and take care for the environment.</string>
    <string name="policy">Privacy and use policy</string>
    <string name="charts">Charts</string>
    <string name="kinetic">Kinetic</string>
    <string name="location">Location</string>
    <string name="obd2">OBDII</string>
    <string name="exit">Exit</string>

    <string name="chart1_content">Chart 1 content</string>
    <string name="chart2_content">Chart 2 content</string>
    <string name="chart3_content">Chart 3 content</string>
    <string name="chart4_content">Chart 4 content</string>

    <string name="bluetooth_obd_connection">Bluetooth OBD connection</string>
    <string name="wifi_obd_connection">WIFI OBD connection</string>
    <string name="bluetooth_actived">Bluetooth has been activated</string>
    <string name="bluetooth_defuse">Bluetooth has not been activated</string>
    <string name="not_bluetooth_support">Your device does not support Bluetooth</string>
    <string name="no_paired_device">No Paired Device</string>
    <string name="not_connected">No connected</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="connected_to">Connected to</string>
    <string name="unable_to_connect_device">Unable to connect device</string>
    <string name="device_connection_was_lost">Device connection was lost</string>

    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="app_name">OBDII-analyzer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
